[bug] add toolbar spacing div to avoid overlapping

--- a/Resources/Public/Styles/wireframe.css
+++ b/Resources/Public/Styles/wireframe.css
@@ -83,6 +83,11 @@
     line-height: 1.5em;
 }
 
+.toolbox-spacer {
+    height: 65px;
+    width: 100%;
+}
+
 .img-responsive {
     width: 100%;
 }
